# Mp3Player

./: CMakeLists.txt  README.md  resources.qrc  resources.rc  test_decoder  test_decoder.cpp  test_qt_version.cpp
src/: main.cpp
src/core/: AudioPlayer.cpp  AudioPlayer.h  PlaylistManager.cpp  PlaylistManager.h  RingBuffer.cpp  RingBuffer.h  TrackMetadata.cpp  TrackMetadata.h  atomicops.h
src/ui/: BottomWidget.cpp  BottomWidget.h  ClickableSlider.h  CustomIconProvider.h  CustomTitleBar.cpp  CustomTitleBar.h  HighlightDelegate.h  InteractiveBackground.cpp  InteractiveBackground.h  LeftWidget.cpp  LeftWidget.h  MainWindow.cpp  MainWindow.h  MarqueeLabel.cpp  MarqueeLabel.h  RightWidget.cpp  RightWidget.h  ThemeManager.cpp  ThemeManager.h  Visualizer.cpp  Visualizer.h
src/ui/models/: CustomSortProxyModel.cpp  CustomSortProxyModel.h  FileBrowserModelFactory.cpp  FileBrowserModelFactory.h
themes/: theme_dark.qss  theme_pastel.qss
